// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputFee > advanced view type > should allow to input a value 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-noruk0"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            checked=""
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-1588dqn"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="relative"
    >
      <div
        class="css-1q57rjh"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1vs1awz"
            data-testid="InputCurrency"
            type="text"
            value="0.447"
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
          data-testid="Input__addon-end"
        >
          <div
            class=""
          >
            <div
              class="flex items-center"
            >
              <div
                class="-mr-4 flex h-14 w-22 flex-row justify-between border-l text-theme-secondary-700 dark:border-theme-secondary-700 sm:w-10 sm:flex-col border-theme-secondary-400"
              >
                <button
                  class="border-r sm:border-r-0 css-jmpn15"
                  data-testid="InputFeeAdvanced__up"
                  type="button"
                >
                  <div
                    class="css-15txs7d"
                    height="10"
                    width="10"
                  >
                    <svg
                      id="chevron-up-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M1 6.975l3.8-3.8c.1-.1.3-.1.4 0l3.8 3.8"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </button>
                <button
                  class="css-1ddtsjs"
                  data-testid="InputFeeAdvanced__down"
                  type="button"
                >
                  <div
                    class="css-15txs7d"
                    height="10"
                    width="10"
                  >
                    <svg
                      id="chevron-down-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > advanced view type > should display converted value when on live net 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-noruk0"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            checked=""
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-1588dqn"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="relative"
    >
      <div
        class="css-1q57rjh"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1vs1awz"
            data-testid="InputCurrency"
            type="text"
            value="0.3"
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
          data-testid="Input__addon-end"
        >
          <div
            class=""
          >
            <div
              class="flex items-center"
            >
              <div
                class="whitespace-no-break mr-3 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  €0.00
                </span>
              </div>
              <div
                class="-mr-4 flex h-14 w-22 flex-row justify-between border-l text-theme-secondary-700 dark:border-theme-secondary-700 sm:w-10 sm:flex-col border-theme-secondary-400"
              >
                <button
                  class="border-r sm:border-r-0 css-jmpn15"
                  data-testid="InputFeeAdvanced__up"
                  type="button"
                >
                  <div
                    class="css-15txs7d"
                    height="10"
                    width="10"
                  >
                    <svg
                      id="chevron-up-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M1 6.975l3.8-3.8c.1-.1.3-.1.4 0l3.8 3.8"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </button>
                <button
                  class="css-1ddtsjs"
                  data-testid="InputFeeAdvanced__down"
                  type="button"
                >
                  <div
                    class="css-15txs7d"
                    height="10"
                    width="10"
                  >
                    <svg
                      id="chevron-down-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > advanced view type > should render disabled 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="css-13c7w0w"
      disabled=""
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none text-theme-secondary-text css-1vs1awz"
          data-testid="InputCurrency"
          disabled=""
          type="text"
          value="0.3"
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center"
          >
            <div
              class="-mr-4 flex h-14 w-22 flex-row justify-between border-l text-theme-secondary-700 dark:border-theme-secondary-700 sm:w-10 sm:flex-col border-theme-secondary-300"
            >
              <button
                class="border-r sm:border-r-0 css-jmpn15"
                data-testid="InputFeeAdvanced__up"
                disabled=""
                type="button"
              >
                <div
                  class="css-15txs7d"
                  height="10"
                  width="10"
                >
                  <svg
                    id="chevron-up-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M1 6.975l3.8-3.8c.1-.1.3-.1.4 0l3.8 3.8"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </button>
              <button
                class="css-1ddtsjs"
                data-testid="InputFeeAdvanced__down"
                disabled=""
                type="button"
              >
                <div
                  class="css-15txs7d"
                  height="10"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > should keep different values for simple and advanced view types 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-noruk0"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-1588dqn"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="relative"
    >
      <div
        class="css-1q57rjh"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1vs1awz"
            data-testid="InputCurrency"
            type="text"
            value="0.3"
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
          data-testid="Input__addon-end"
        >
          <div
            class=""
          >
            <div
              class="flex items-center"
            >
              <div
                class="-mr-4 flex h-14 w-22 flex-row justify-between border-l text-theme-secondary-700 dark:border-theme-secondary-700 sm:w-10 sm:flex-col border-theme-secondary-400"
              >
                <button
                  class="border-r sm:border-r-0 css-jmpn15"
                  data-testid="InputFeeAdvanced__up"
                  type="button"
                >
                  <div
                    class="css-15txs7d"
                    height="10"
                    width="10"
                  >
                    <svg
                      id="chevron-up-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M1 6.975l3.8-3.8c.1-.1.3-.1.4 0l3.8 3.8"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </button>
                <button
                  class="css-1ddtsjs"
                  data-testid="InputFeeAdvanced__down"
                  type="button"
                >
                  <div
                    class="css-15txs7d"
                    height="10"
                    width="10"
                  >
                    <svg
                      id="chevron-down-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > should keep different values for simple and advanced view types 2`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should change fee option with converted values = false 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="relative w-full"
      data-testid="SelectDropdown"
    >
      <div
        class="sr-only css-1q57rjh"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1vs1awz"
            data-testid="select-list__input"
            readonly=""
            tabindex="-1"
            type="text"
            value="0.006 DARK"
          />
        </div>
      </div>
      <div
        class="w-full"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="InputFeeSimpleSelect__dropdown-menu"
          role="combobox"
        >
          <div>
            <label
              for="InputFeeSimpleSelect__dropdown-input"
              id="InputFeeSimpleSelect__dropdown-label"
            />
            <div
              class="invisible fixed w-auto whitespace-nowrap"
            >
              0.006 DARK…
            </div>
            <div
              class="relative css-1q57rjh"
            >
              <div
                class="-ml-4 mr-2 flex h-full items-center rounded-l border-r border-theme-secondary-400 bg-theme-secondary-100 px-4 dark:border-theme-secondary-700 dark:bg-theme-secondary-background"
              >
                Avg.
              </div>
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="InputFeeSimpleSelect__dropdown-menu"
                  aria-labelledby="InputFeeSimpleSelect__dropdown-label"
                  autocomplete="off"
                  class="no-ligatures w-full border-none css-1vs1awz"
                  data-testid="SelectDropdown__input"
                  id="InputFeeSimpleSelect__dropdown-input"
                  placeholder="Select option"
                  readonly=""
                  type="text"
                  value="0.006 DARK"
                />
                <span
                  class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                  data-testid="Input__suggestion"
                >
                  <span
                    class="truncate"
                  >
                    0.006 DARK
                  </span>
                </span>
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="Input__addon-end"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex items-center justify-center px-1 py-2"
                      data-testid="SelectDropdown__caret"
                    >
                      <div
                        class="absolute inset-0 block cursor-pointer md:hidden"
                      />
                      <div
                        class="transition-transform text-theme-secondary-500 css-15txs7d"
                        height="10"
                        width="10"
                      >
                        <svg
                          id="caret-down"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="InputFeeSimpleSelect__dropdown-label"
            id="InputFeeSimpleSelect__dropdown-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should change fee option with converted values = true 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="relative w-full"
      data-testid="SelectDropdown"
    >
      <div
        class="sr-only css-1q57rjh"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1vs1awz"
            data-testid="select-list__input"
            readonly=""
            tabindex="-1"
            type="text"
            value="0.006 DARK"
          />
        </div>
      </div>
      <div
        class="w-full"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="InputFeeSimpleSelect__dropdown-menu"
          role="combobox"
        >
          <div>
            <label
              for="InputFeeSimpleSelect__dropdown-input"
              id="InputFeeSimpleSelect__dropdown-label"
            />
            <div
              class="invisible fixed w-auto whitespace-nowrap"
            >
              0.006 DARK…
            </div>
            <div
              class="relative css-1q57rjh"
            >
              <div
                class="-ml-4 mr-2 flex h-full items-center rounded-l border-r border-theme-secondary-400 bg-theme-secondary-100 px-4 dark:border-theme-secondary-700 dark:bg-theme-secondary-background"
              >
                Avg.
              </div>
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="InputFeeSimpleSelect__dropdown-menu"
                  aria-labelledby="InputFeeSimpleSelect__dropdown-label"
                  autocomplete="off"
                  class="no-ligatures w-full border-none css-1vs1awz"
                  data-testid="SelectDropdown__input"
                  id="InputFeeSimpleSelect__dropdown-input"
                  placeholder="Select option"
                  readonly=""
                  type="text"
                  value="0.006 DARK"
                />
                <span
                  class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                  data-testid="Input__suggestion"
                >
                  <span
                    class="truncate"
                  >
                    0.006 DARK
                  </span>
                </span>
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="Input__addon-end"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="whitespace-no-break mr-2 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      <span
                        class="whitespace-nowrap"
                        data-testid="Amount"
                      >
                        €0.00
                      </span>
                    </div>
                    <div
                      class="flex items-center justify-center px-1 py-2"
                      data-testid="SelectDropdown__caret"
                    >
                      <div
                        class="absolute inset-0 block cursor-pointer md:hidden"
                      />
                      <div
                        class="transition-transform text-theme-secondary-500 css-15txs7d"
                        height="10"
                        width="10"
                      >
                        <svg
                          id="caret-down"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="InputFeeSimpleSelect__dropdown-label"
            id="InputFeeSimpleSelect__dropdown-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should display converted values when on live net 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should render loading state of simple view in sm 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-naoxjm"
          disabled=""
          role="button"
        >
          Simple
        </span>
        <label
          class="css-p8zz1l"
          disabled=""
        >
          <input
            class="css-1r71f0z toggle-input"
            disabled=""
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-td23d8"
              disabled=""
            />
          </div>
        </label>
        <span
          class="css-1myte97"
          disabled=""
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            aria-busy="true"
            aria-live="polite"
            class="flex w-auto max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton my-1 h-3"
              style="width: 100px;"
            >
              ‌
            </span>
            <br />
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            aria-busy="true"
            aria-live="polite"
            class="flex w-auto max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton my-1 h-3"
              style="width: 100px;"
            >
              ‌
            </span>
            <br />
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            aria-busy="true"
            aria-live="polite"
            class="flex w-auto max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton my-1 h-3"
              style="width: 100px;"
            >
              ‌
            </span>
            <br />
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should render loading state of simple view in xs 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-naoxjm"
          disabled=""
          role="button"
        >
          Simple
        </span>
        <label
          class="css-p8zz1l"
          disabled=""
        >
          <input
            class="css-1r71f0z toggle-input"
            disabled=""
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-td23d8"
              disabled=""
            />
          </div>
        </label>
        <span
          class="css-1myte97"
          disabled=""
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <span
      aria-busy="true"
      aria-live="polite"
      class="flex w-auto max-w-full items-center overflow-hidden leading-none"
    >
      <span
        class="react-loading-skeleton h-14 w-full"
      >
        ‌
      </span>
      <br />
    </span>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should render simple view in lg 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should render simple view in md 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should render simple view in sm 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should render simple view in xl 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should render simple view in xs 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="relative w-full"
      data-testid="SelectDropdown"
    >
      <div
        class="sr-only css-1q57rjh"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1vs1awz"
            data-testid="select-list__input"
            readonly=""
            tabindex="-1"
            type="text"
            value="0.456 DARK"
          />
        </div>
      </div>
      <div
        class="w-full"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="InputFeeSimpleSelect__dropdown-menu"
          role="combobox"
        >
          <div>
            <label
              for="InputFeeSimpleSelect__dropdown-input"
              id="InputFeeSimpleSelect__dropdown-label"
            />
            <div
              class="invisible fixed w-auto whitespace-nowrap"
            >
              0.456 DARK…
            </div>
            <div
              class="relative css-1q57rjh"
            >
              <div
                class="-ml-4 mr-2 flex h-full items-center rounded-l border-r border-theme-secondary-400 bg-theme-secondary-100 px-4 dark:border-theme-secondary-700 dark:bg-theme-secondary-background"
              >
                Avg.
              </div>
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="InputFeeSimpleSelect__dropdown-menu"
                  aria-labelledby="InputFeeSimpleSelect__dropdown-label"
                  autocomplete="off"
                  class="no-ligatures w-full border-none css-1vs1awz"
                  data-testid="SelectDropdown__input"
                  id="InputFeeSimpleSelect__dropdown-input"
                  placeholder="Select option"
                  readonly=""
                  type="text"
                  value="0.456 DARK"
                />
                <span
                  class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                  data-testid="Input__suggestion"
                >
                  <span
                    class="truncate"
                  >
                    0.456 DARK
                  </span>
                </span>
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="Input__addon-end"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex items-center justify-center px-1 py-2"
                      data-testid="SelectDropdown__caret"
                    >
                      <div
                        class="absolute inset-0 block cursor-pointer md:hidden"
                      />
                      <div
                        class="transition-transform text-theme-secondary-500 css-15txs7d"
                        height="10"
                        width="10"
                      >
                        <svg
                          id="caret-down"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="InputFeeSimpleSelect__dropdown-label"
            id="InputFeeSimpleSelect__dropdown-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should render simple view with converted values in lg 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should render simple view with converted values in md 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should render simple view with converted values in sm 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should render simple view with converted values in xl 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
          <span
            class="whitespace-nowrap text-sm text-theme-secondary-500"
            data-testid="Amount"
          >
            €0.00
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should render simple view with converted values in xs 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="relative w-full"
      data-testid="SelectDropdown"
    >
      <div
        class="sr-only css-1q57rjh"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1vs1awz"
            data-testid="select-list__input"
            readonly=""
            tabindex="-1"
            type="text"
            value="0.456 DARK"
          />
        </div>
      </div>
      <div
        class="w-full"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="InputFeeSimpleSelect__dropdown-menu"
          role="combobox"
        >
          <div>
            <label
              for="InputFeeSimpleSelect__dropdown-input"
              id="InputFeeSimpleSelect__dropdown-label"
            />
            <div
              class="invisible fixed w-auto whitespace-nowrap"
            >
              0.456 DARK…
            </div>
            <div
              class="relative css-1q57rjh"
            >
              <div
                class="-ml-4 mr-2 flex h-full items-center rounded-l border-r border-theme-secondary-400 bg-theme-secondary-100 px-4 dark:border-theme-secondary-700 dark:bg-theme-secondary-background"
              >
                Avg.
              </div>
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="InputFeeSimpleSelect__dropdown-menu"
                  aria-labelledby="InputFeeSimpleSelect__dropdown-label"
                  autocomplete="off"
                  class="no-ligatures w-full border-none css-1vs1awz"
                  data-testid="SelectDropdown__input"
                  id="InputFeeSimpleSelect__dropdown-input"
                  placeholder="Select option"
                  readonly=""
                  type="text"
                  value="0.456 DARK"
                />
                <span
                  class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                  data-testid="Input__suggestion"
                >
                  <span
                    class="truncate"
                  >
                    0.456 DARK
                  </span>
                </span>
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="Input__addon-end"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="whitespace-no-break mr-2 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      <span
                        class="whitespace-nowrap"
                        data-testid="Amount"
                      >
                        €0.00
                      </span>
                    </div>
                    <div
                      class="flex items-center justify-center px-1 py-2"
                      data-testid="SelectDropdown__caret"
                    >
                      <div
                        class="absolute inset-0 block cursor-pointer md:hidden"
                      />
                      <div
                        class="transition-transform text-theme-secondary-500 css-15txs7d"
                        height="10"
                        width="10"
                      >
                        <svg
                          id="caret-down"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="InputFeeSimpleSelect__dropdown-label"
            id="InputFeeSimpleSelect__dropdown-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should update value when clicking button Average 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should update value when clicking button Fast 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee > simple view type > should update value when clicking button Slow 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="css-1588dqn"
          role="button"
        >
          Simple
        </span>
        <label
          class="css-1uxo3sa"
        >
          <input
            class="css-1r71f0z toggle-input"
            type="checkbox"
          />
          <div
            class="css-10kxbe9 toggle-handle"
          >
            <span
              class="css-14ojvms"
            />
          </div>
        </label>
        <span
          class="css-noruk0"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex w-full items-center space-x-3"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="true"
        aria-label="0.006"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.456"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="css-1sbhrf0"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="whitespace-nowrap text-sm"
            data-testid="Amount"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
